[package]
name = "loopdev-3"
description = "Setup and control loop devices"
version = "0.5.1"
authors = ["Stratis Developers <stratis-devel@lists.fedorahosted.org>", "Michael Daffin <michael@daffin.io>"]
license = "MIT"
documentation = "https://docs.rs/loopdev-3"
repository = "https://github.com/stratis-storage/loopdev-3"
readme = "README.md"
categories = ["os::linux-apis", "api-bindings"]
keywords = ["loop"]
edition = "2021"
exclude = ["/.github", ".gitignore", "Makefile"]

[lib]
name = "loopdev"

[features]
direct_io = []

[dependencies]
errno = "0.3.0"
libc = "0.2.105"

[build-dependencies]
bindgen = { version = "0.69.0", default-features = false, features = ["runtime"] }

[dev-dependencies]
glob = "0.3.0"
gpt = "3.0.0"
once_cell = "1.19.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tempfile = "3.2.0"
