[package]
name = "loopdev-3"
description = "Setup and control loop devices"
version = "0.5.1"
authors = ["Stratis Developers <stratis-devel@lists.fedorahosted.org>", "Michael Daffin <michael@daffin.io>"]
rust-version = "1.74.0"
license = "MIT"
documentation = "https://docs.rs/loopdev-3"
repository = "https://github.com/stratis-storage/loopdev-3"
readme = "README.md"
categories = ["os::linux-apis", "api-bindings"]
keywords = ["loop"]
edition = "2021"
exclude = ["/.github", ".gitignore", "Makefile"]

[lib]
name = "loopdev"

[features]
direct_io = []

[dependencies]
errno = "0.3.0"
libc = "0.2.133"

[build-dependencies]
bindgen = { version = "0.71.0", default-features = false, features = ["runtime"] }

[dev-dependencies]
glob = "0.3.0"
gpt = "3.0.0"
once_cell = "1.19.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tempfile = "3.4.0"

[lints.rust]
warnings = { level = "deny" }
future_incompatible = { level = "deny", priority = 1 }
unused = { level = "deny", priority = 2}
rust_2018_idioms = { level = "deny", priority = 3 }
nonstandard_style = { level = "deny", priority = 4 }

[lints.clippy]
all = { level = "deny" }
cargo = { level = "deny" , priority = 1}
multiple-crate-versions = { level = "allow", priority = 2 }
